--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ body {
 /* contact */
 
 .contact-box {
-    display: flex;
+    display: inline-block;
     background-color: #1D232C;
     color: white;
     width: 70%;
@@ -219,28 +219,33 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
+    
+    
 
 }
 
 .contact {
-    padding: 60px;
+   width: 100%;
+    padding: 10px;
     margin: 10px;
 }
 
 .name input {
-    width: 400%;
+    width: 70%;
     padding: 10px;
 }
 
 .email input {
+    width: 70%;
     padding: 10px;
-    width: 400%;
+    
 }
 
 .message input {
+    width: 70%;
     padding: 10px;
     height: 40px;
-    width: 400%;
+   
 }
 
 /* media query */
